add missing border

--- a/charge.html
+++ b/charge.html
@@ -22,7 +22,7 @@
     <header class="c-header">
         <div class="header-navbar container">
             <h1><a class="logo" href="./index.html">chatTalker聊天機器人</a></h1>
-            <a href="./charge.html" class="btn btn-m btn-accent">方案費用</a>
+            <a href="./charge.html" class="btn btn-m btn-accent border-accent">方案費用</a>
         </div>
         <div class="header-banner container">
             <div class="banner-intro">
