--- a/charge.html
+++ b/charge.html
@@ -20,21 +20,23 @@
     </div>
 
     <header class="c-header">
-        <div class="header-navbar container">
-            <h1><a class="logo" href="./index.html">chatTalker聊天機器人</a></h1>
-            <a href="./charge.html" class="btn btn-m btn-accent border-accent">方案費用</a>
+        <div class="header-navbar">
+            <div class="container">
+                <h1><a class="logo" href="./index.html">chatTalker聊天機器人</a></h1>
+                <a href="./charge.html" class="btn btn-m btn-accent border-accent">方案費用</a>
+            </div>
         </div>
-        <div class="header-banner container">
-            <div class="banner-intro">
-                <h2 class="banner-title title-b title-mb1">計費方式說明</h2>
+        <div class="header-banner">
+            <div class="banner-intro container">
+                <h2 class="banner-title fw-bold mb-1rem">計費方式說明</h2>
                 <h3 class="banner-subtitle">聊天機器人幫你實現增粉、轉單、客服等目標</h3>
             </div>
         </div>
         <div class="banner-gray"></div>
     </header>
 
-    <div class="programs container mb-block">
-        <h3 class="programs-title title-b title-mb3 ta-c">彈性選擇，提供您選擇最適合的方案</h3>
+    <div class="programs container mb-block ta-c">
+        <h3 class="programs-title fw-bold mb-3rem">彈性選擇，提供您選擇最適合的方案</h3>
         <ul class="programs-btns">
             <li><a class="btn btn-l btn-white border-primary btn-white--active" href="#"><span>10000</span>位</a></li>
             <li><a class="btn btn-l btn-white border-primary" href="#"><span>15000</span>位</a></li>
@@ -44,57 +46,62 @@
         </ul>
         
         <ul class="programs-showcase">
-            <li class="plan plan-basic rounded-shadow">
-                <h4 class="plan-title title-b ta-c">基本版</h4>
-                <p class="plan-brief ta-c">提供中小企業最必要的功能<br>完整建立分眾以達到精準的行銷自動化</p>
-                <div class="plan-calc">
-                    <div class="userAmount rounded-block">
-                        <p class="caption">訂閱用戶數</p>
-                        <p class="number"><span>10000</span><sub>位</sub></p>
+            <li class="plan rounded-shadow">
+                <h4 class="plan-title fw-bold">基本版</h4>
+                <div class="plan-body">
+                    <p class="plan-brief">提供中小企業最必要的功能<br>完整建立分眾以達到精準的行銷自動化</p>
+                    <div class="plan-calc">
+                        <div class="userAmount rounded-block">
+                            <p class="caption">訂閱用戶數</p>
+                            <p class="number"><span>10000</span><sub class="fw-bold">位</sub></p>
+                        </div>
+                        <div class="equal">=</div>
+                        <div class="charge rounded-block">
+                            <p class="caption">試算每月的費用</p>
+                            <p class="number"><span>600</span><sub class="fw-bold">TWD</sub></p>
+                        </div>
                     </div>
-                    <div class="equal">=</div>
-                    <div class="charge rounded-block">
-                        <p class="caption">試算每月的費用</p>
-                        <p class="number"><span>600</span><sub>TWD</sub></p>
-                    </div>
+                
+                    <ul class="plan-content ta-l">
+                        <li>支援 Messenger / Instagram 或 LINE 渠道</li>
+                        <li>10 個進階套件</li>
+                        <li>可設定 50 種分眾標籤</li>
+                        <li>客服人機轉接</li>
+                    </ul>
+                    <a href="#" class="btn btn-l btn-primary border-primary">立即體驗</a>
                 </div>
-                <div class="plan-content">
-                    <p>支援 Messenger / Instagram 或 LINE 渠道</p>
-                    <p>10 個進階套件</p>
-                    <p>可設定 50 種分眾標籤</p>
-                    <p>客服人機轉接</p>
-                </div>
-                <a href="#" class="btn btn-l btn-primary border-primary">立即體驗</a>
             </li>
 
-            <li class="plan plan-standard rounded-shadow">
-                <h4 class="plan-title title-b ta-c">標準版</h4>
-                <p class="plan-brief ta-c">建立企業流量池，全通路數據整合與交換<br>高可靠性服務</p>
-                <div class="plan-calc">
-                    <div class="userAmount rounded-block">
-                        <p class="caption">訂閱用戶數</p>
-                        <p class="number"><span>10000</span><sub>位</sub></p>
+            <li class="plan rounded-shadow">
+                <h4 class="plan-title fw-bold">標準版</h4>
+                <div class="plan-body">
+                    <p class="plan-brief">建立企業流量池，全通路數據整合與交換<br>高可靠性服務</p>
+                    <div class="plan-calc">
+                        <div class="userAmount rounded-block">
+                            <p class="caption">訂閱用戶數</p>
+                            <p class="number"><span>10000</span><sub class="fw-bold">位</sub></p>
+                        </div>
+                        <div class="equal">=</div>
+                        <div class="charge rounded-block">
+                            <p class="caption">試算每月的費用</p>
+                            <p class="number"><span>1600</span><sub class="fw-bold">TWD</sub></p>
+                        </div>
                     </div>
-                    <div class="equal">=</div>
-                    <div class="charge rounded-block">
-                        <p class="caption">試算每月的費用</p>
-                        <p class="number"><span>1600</span><sub>TWD</sub></p>
-                    </div>
+                    <ul class="plan-content ta-l">
+                        <li>支援多個 Messenger、Instagram 和 LINE 渠道</li>
+                        <li>20 個進階及行銷互動套件</li>
+                        <li>可設定 500 種分眾標籤</li>
+                        <li>客服人機轉接＋自動指派專員處理</li>
+                    </ul>
+                    <a href="#" class="btn btn-l btn-primary border-primary">立即體驗</a>
                 </div>
-                <div class="plan-content">
-                    <p>支援多個 Messenger、Instagram 和 LINE 渠道</p>
-                    <p>20 個進階及行銷互動套件</p>
-                    <p>可設定 500 種分眾標籤</p>
-                    <p>客服人機轉接＋自動指派專員處理</p>
-                </div>
-                <a href="#" class="btn btn-l btn-primary border-primary">立即體驗</a>
             </li>
         </ul>
 
     </div>
 
     <div class="FAQ container mb-block">
-        <h3 class="FAQ-title title-b title-mb3 ta-c">常見問題</h3>
+        <h3 class="FAQ-title fw-bold mb-3rem ta-c">常見問題</h3>
         <ul class="collapse-list">
             <li class="list-items rounded-shadow">
                 <a class="click-area" href="#">
@@ -117,7 +124,7 @@
         </ul>
     </div>
 
-    <div class="copyright ta-c">&copy; 2022 chatTalker. All Rights Reserved.</div>
+    <p class="copyright ta-c">&copy; 2022 chatTalker. All Rights Reserved.</p>
 
 </body>
 </html>
